tests/sqllogic/sdb/pg/explain/insert.test
statement ok
CREATE TABLE series_table(a INTEGER, b INTEGER, c INTEGER, PRIMARY KEY (a,b,c));


statement ok
CREATE TABLE t (c1 VARCHAR PRIMARY KEY, c2 INT);


query
EXPLAIN select * from t;
----
QUERY PLAN
╭─ SEQ_SCAN ────────────╮
│ Table: t              │
│ Type: Sequential Scan │
│ Projections: c1, c2   │
│ ~0 rows               │
╰───────────────────────╯


query
EXPLAIN INSERT INTO t VALUES ('text', 42);
----
QUERY PLAN
╭─ INSERT ───────────╮
╰──────────┬─────────╯
╭─ COLUMN_DATA_SCAN ─╮
│ ~1 row             │
╰────────────────────╯


query error db error: ERROR: table t has 2 columns but 1 values were supplied
EXPLAIN INSERT INTO t VALUES ('text');


statement error
INSERT INTO t (c2, c2) VALUES (1, 4);
----
db error: ERROR: Duplicate column name "c2" in INSERT


query
SELECT * FROM t;
----
c1	c2


statement count 1
WITH
babsky as (select 1 as pencil),
zhidsky as (select 3 as iq)
INSERT INTO series_table
WITH babsky as (select 2 as pencil)
SELECT * FROM babsky as buterbrod1, zhidsky, babsky as buterbrod2;


query
SELECT * FROM series_table;
----
a	b	c
2	3	2
